# my_arrays

./: CMakeLists.txt  README.md  run.sh
src/: main.c
src/AerEco/: geometry.c
src/ArrayAlgos/: my_arrays.c  my_arrays.h
src/DiscreteShapes/: cubed_cube.c  cubed_cube.h
src/IntegralEq/: acoustics_nonstat_on_cube.h
